# BANK-Loan-approval

./: README.md  pyproject.toml
model/: encoder.pkl  ensemble_model.pkl  scaler.pkl
model/mlruns/0/: meta.yaml
model/mlruns/0/0064b513700c4285be64f0cf140483e2/: meta.yaml
model/mlruns/0/15b075767f51480c9b1310d95b2f1588/: meta.yaml
model/mlruns/0/2263c352466f41ca835bd293f26d80df/: meta.yaml
model/mlruns/0/38738fb6c97a45e7a2626a0d7a0872d2/: meta.yaml
model/mlruns/0/3b6682b638fe47fe82eb99176202f9bd/: meta.yaml
model/mlruns/0/418eb161feb64f57a84a3ca3af56c267/: meta.yaml
model/mlruns/0/574cae6f996f4b23878966c926440b1a/: meta.yaml
model/mlruns/0/584eede9e4a24ddaa7f905e8aba4e9bf/: meta.yaml
model/mlruns/0/6221409f31a44d74a43059b0959ed943/: meta.yaml
model/mlruns/0/9778906d16954bfeb111d9b72459aea9/: meta.yaml
model/mlruns/0/99381ad2ecd94aaba5f36efbf9b52fe2/: meta.yaml
model/mlruns/0/bcfe7a0b7272443582f6efa2fe4e0b95/: meta.yaml
model/mlruns/0/ed07e71bf63e48988fe4a655bf6dd6f9/: meta.yaml
model/mlruns/models/AdaBoost (Mejor)/: meta.yaml
model/mlruns/models/Ensamblaje de Modelos/: meta.yaml
model/mlruns/models/Random Forest (Mejor)/: meta.yaml
model/mlruns/models/Regresión Logística (Mejor)/: meta.yaml
model/mlruns/models/SVM (Mejor)/: meta.yaml
notebooks/: demo.ipynb
py/: Streamlit_app.py  data_inspector.py  data_loader.py  data_preprocessor.py  data_splitter.py  data_visualizer.py  ensemble_model.pkl  main.py  model_tester.py
py/mlruns/0/: meta.yaml
py/mlruns/models/Ensamblaje de Modelos/: meta.yaml
visualization/: data_visualizer.py
(+106 files in other folders)
